# OpenSwarm

./: .gitignore  BACKLOG.md  Cargo.toml  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TUI_LOGGING_FIX.md  ZEROCLAW_INSTALL.md  ZEROCLAW_URL_UPDATE_SUMMARY.md  run-console.sh  test-tui-logging.sh
agent-impl/: README.md
agent-impl/zeroclaw/: zeroclaw-agent.sh
crates/openswarm-connector/: Cargo.toml
crates/openswarm-connector/src/: agent_bridge.rs  config.rs  connector.rs  file_server.rs  lib.rs  main.rs  operator_console.rs  reputation.rs  rpc_server.rs  tui.rs
crates/openswarm-connector/tests/: integration_tests.rs  multi_agent_tests.rs
crates/openswarm-consensus/: Cargo.toml
crates/openswarm-consensus/src/: cascade.rs  lib.rs  rfp.rs  voting.rs
crates/openswarm-consensus/tests/: cascade_tests.rs  rfp_tests.rs  voting_tests.rs
crates/openswarm-hierarchy/: Cargo.toml
crates/openswarm-hierarchy/src/: elections.rs  epoch.rs  geo_cluster.rs  lib.rs  pyramid.rs  succession.rs
crates/openswarm-hierarchy/tests/: election_tests.rs  pyramid_tests.rs
crates/openswarm-network/: Cargo.toml
crates/openswarm-network/src/: behaviour.rs  discovery.rs  lib.rs  size_estimator.rs  swarm_host.rs  topics.rs  transport.rs
crates/openswarm-protocol/: Cargo.toml
crates/openswarm-protocol/src/: constants.rs  crypto.rs  error.rs  identity.rs  lib.rs  messages.rs  types.rs
crates/openswarm-protocol/tests/: crypto_tests.rs  identity_tests.rs  message_tests.rs  types_tests.rs
crates/openswarm-state/: Cargo.toml
crates/openswarm-state/src/: content_store.rs  crdt.rs  granularity.rs  lib.rs  merkle_dag.rs
crates/openswarm-state/tests/: content_store_tests.rs  crdt_tests.rs  granularity_tests.rs  merkle_dag_tests.rs
crates/wws-connector/src/: connector.rs  file_server.rs  main.rs  rpc_server.rs
crates/wws-network/src/: behaviour.rs  lib.rs  swarm_host.rs
demo/: demo-setup-prompt.md
docker/: Dockerfile
docs/: Agent-Instructions.md  Connector-Guide.md  HEARTBEAT.md  Home.md  RUN_AGENT.md  SKILL.md  package.json  protocol-specification.md  wws-moltbook-insights.md
docs/plans/: 2026-03-02-protocol-completeness-v0.6.0.md
scripts/: deploy-bootstrap-gcp.sh
tests/e2e/: e2e_20_agents.py
tests/playwright/: e2e-30-agent-web.spec.js
webapp/src/: App.jsx  styles.css
webapp/src/api/: client.js
webapp/src/components/: AgentDetailPanel.jsx  CosmicCanvas.jsx  Header.jsx  LiveGraph.jsx  MessagesPanel.jsx
