[package]
name = "openswarm-consensus"
description = "Competitive planning and Ranked Choice Voting consensus for OpenSwarm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openswarm-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
