[package]
name = "openswarm-network"
description = "P2P networking layer using libp2p for OpenSwarm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openswarm-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# libp2p
futures = "0.3"

libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "dns",
    "kad",
    "gossipsub",
    "mdns",
    "identify",
    "ping",
    "autonat",
    "relay",
    "macros",
    "serde",
    "ed25519",
] }
