[package]
name = "openswarm-protocol"
description = "Core protocol types and message definitions for the Agent Swarm Communication Protocol (ASCP)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
