[package]
name = "openswarm-state"
description = "CRDT state management and Merkle-DAG verification for OpenSwarm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openswarm-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
